<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Terms_And_Conditions"
    android:background="@color/colorBackground">

    <TextView
        android:id="@+id/Terms_and_Conditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/terms_and_conditions"
        android:textAlignment="center"
        android:textColor="@color/colorText"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="44dp"
        android:text="@string/terms"
        android:textAlignment="center"
        android:textColor="@color/colorText"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Terms_and_Conditions" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/small_white_bitton"
        android:text="@string/go_back"
        android:textColor="@color/colorTextWhiteButton"
        android:textSize="18sp"
        android:onClick="goBackButtonPressed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="OnClick" />
</androidx.constraintlayout.widget.ConstraintLayout>