<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".Chat_Activity">

    <Button
        android:id="@+id/log_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/small_white_bitton"
        android:textColor="@color/colorTextWhiteButton"
        android:text="@string/log_out"
        android:onClick="logOutButtonPressed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/small_white_bitton"
        android:text="@string/profile"
        android:textColor="@color/colorTextWhiteButton"
        app:layout_constraintBottom_toBottomOf="@+id/btn_myfriends"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_add_friend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/small_white_bitton"
        android:onClick="addFriendPressed"
        android:text="@string/add_friend"
        android:textColor="@color/colorTextWhiteButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_myfriends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/small_white_bitton"
        android:text="My Friends"
        android:textColor="@color/colorTextWhiteButton"
        app:layout_constraintBottom_toBottomOf="@+id/button_add_friend"
        app:layout_constraintEnd_toStartOf="@+id/btn_profile"
        app:layout_constraintStart_toEndOf="@+id/button_add_friend" />


</androidx.constraintlayout.widget.ConstraintLayout>